--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angular-2-data-table",
-  "version": "0.1.2",
-  "description": "An Angular 2 data table, with pagination, sorting, expandable rows etc.",
+  "name": "angular-2-data-table-bootstrap4",
+  "version": "0.1.6",
+  "description": "An Angular 2 data table, with pagination, sorting, expandable rows etc. Bootstrap 4 version.",
   "keywords": [
     "angular",
     "angular2",
@@ -15,18 +15,18 @@
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist/* && tsc",
-    "serve": "rm -rf dist/ && tsc -w",
+    "build": "rimraf dist/* && tsc && node src/tasks/replace.js",
+    "serve": "rimraf dist/ && tsc -w && node src/tasks/replace.js",
     "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git://git@github.com/ggmod/angular-2-data-table.git"
+    "url": "git://git@github.com/scotteby/angular-2-data-table.git"
   },
   "peerDependencies": {
     "@angular/core": "^2.0.0"
   },
-  "author": "ggmod <ggmod64@gmail.com>",
+  "author": "echobravoyankee <scott.m.eby@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@angular/common": "^2.0.0",
@@ -34,5 +34,8 @@
     "@angular/forms": "^2.0.0",
     "rxjs": "^5.0.0-beta.12",
     "typescript": "^2.0.2"
+  },
+  "dependencies": {
+    "replace": "^0.3.0"
   }
 }
