--- a/package.json
+++ b/package.json
@@ -1,41 +1,54 @@
 {
-  "name": "angular-2-data-table-bootstrap4",
-  "version": "0.1.6",
-  "description": "An Angular 2 data table, with pagination, sorting, expandable rows etc. Bootstrap 4 version.",
+  "name": "angular-4-data-table-bootstrap-4",
+  "version": "0.0.1",
+  "description": "An Angular 4 data table, with pagination, sorting, expandable rows etc. Bootstrap 4 version.",
   "keywords": [
     "angular",
-    "angular2",
-    "Angular 2",
+    "angular4",
+    "Angular 4",
     "ng2",
     "datatable",
     "data-table",
     "data table",
+    "Bootstrap",
+    "Bootstrap 4",
     "pagination"
   ],
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist/* && tsc && node src/tasks/replace.js",
-    "serve": "rimraf dist/ && tsc -w && node src/tasks/replace.js",
+    "build": "tsc",
+    "serve": "tsc -w",
     "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git://git@github.com/scotteby/angular-2-data-table.git"
+    "url": "git@github.com:afermon/angular-4-data-table-bootstrap-4.git"
   },
   "peerDependencies": {
-    "@angular/core": "^2.0.0"
+    "@angular/core": "^4.0.1.1"
   },
-  "author": "echobravoyankee <scott.m.eby@gmail.com>",
+  "author": "afermon <alex@xicre.com>",
   "license": "MIT",
-  "devDependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "rxjs": "^5.0.0-beta.12",
-    "typescript": "^2.0.2"
-  },
+  "devDependencies": {},
   "dependencies": {
-    "replace": "^0.3.0"
-  }
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/compiler-cli": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/forms": "^4.0.1",
+    "@angular/platform-browser": "^4.2.5",
+    "@angular/platform-browser-dynamic": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@types/node": "~6.0.60",
+    "rxjs": "^5.1.0",
+    "ts-node": "~2.0.0",
+    "typescript": "2.1.5",
+    "zone.js": "^0.8.12"
+  },
+  "false": {},
+  "bugs": {
+    "url": "https://github.com/afermon/angular-4-data-table-bootstrap-4/issues"
+  },
+  "homepage": "https://github.com/afermon/angular-4-data-table-bootstrap-4/"
 }
