--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "declaration": true,
     "emitDecoratorMetadata": true,
@@ -9,10 +9,18 @@
     "moduleResolution": "node",
     "noEmitOnError": true,
     "noImplicitAny": false,
+    "preserveConstEnums": true,
     "outDir": "dist/",
     "rootDir": "src/",
     "sourceMap": true,
     "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "inlineSources": true
   },
   "exclude": [
