--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,33 @@
+
 {
-  "compileOnSave": true,
   "compilerOptions": {
+    "baseUrl": ".",
     "declaration": true,
-    "emitDecoratorMetadata": true,
+    "stripInternal": true,
     "experimentalDecorators": true,
-    "mapRoot": "/",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "noEmitOnError": true,
+    "strictNullChecks": false,
     "noImplicitAny": false,
-    "preserveConstEnums": true,
-    "outDir": "dist/",
-    "rootDir": "src/",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "paths": {
+      "@angular/core": ["node_modules/@angular/core"],
+      "rxjs/*": ["node_modules/rxjs/*"]
+    },
+    "rootDir": "src",
+    "outDir": "dist",
     "sourceMap": true,
+    "inlineSources": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "skipLibCheck": true,
     "lib": [
-      "es2016",
+      "es2015", 
       "dom"
-    ],
-    "inlineSources": true
+    ]
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-    "index.ts"
-  ]
+  "files": [
+    "src/index.ts"
+  ],
+  "angularCompilerOptions": {
+    "strictMetadataEmit": true
+  }
 }
